[Autoplay] Do not clear flags on same document navigation

This fixes a bug where AutoplayFlags are cleared on same
document navigations. Flags are associated with a
Document so we should not do this.

BUG=849674

Change-Id: I9862b6397ff473f1af3e8bf9ec103cea8842c509
Reviewed-on: https://chromium-review.googlesource.com/1089350
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565139}
Former-commit-id: e0285d9ab24f5537c59f2f1f41cdaa4727c6ace1